@@ -32,7 +32,7 @@ public class Config
     /* Hashing strategy Random or OPHF */
     public String partitioner;
     
-    public Boolean auto_bootstrap = false;
+    public Boolean auto_bootstrap = true;
     public Boolean hinted_handoff_enabled = true;
     public Integer max_hint_window_in_ms = Integer.MAX_VALUE;
     
